# agora

./: .dockerignore  .gitignore  BUILDLOG.md  CLAUDE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: agent-task.yml  config.yml
agenthub/: __init__.py  boardsync.py  bridge.py  cli.py  client.py  config.py  crossdm.py  dispatch.py  export.py  ghsync.py  participants.py  research.py  selfupdate.py  server.py  spawn.py  store.py  supervisor.py  transport.py  web_access.py
agenthub/web/: app.js  index.html  style.css
deploy/: agent-hub.service  docker-entrypoint.sh
docs/: multi-repo-board.md  multi-user.md  private-channels-migration.md  windows-quickstart.md
scripts/: claude_agent.py  demo_agent.py  reap_orphan_workers.py  responder.py
tests/: test_alert.py  test_boardsync.py  test_bridge.py  test_catchup.py  test_cli_mkchannel.py  test_client.py  test_collab_demo.py  test_crossdm.py  test_crossuser_integration.py  test_default_channels.py  test_delivery.py  test_digest.py  test_dispatch.py  test_docker.py  test_docs.py  test_export.py  test_ghsync.py  test_graph.py  test_init_pointer.py  test_injection_safety.py  test_join.py  test_kb.py  test_liveness.py  test_locks.py  test_mentions.py  test_migrate_channels.py  test_multichannel.py  test_multiuser_e2e.py  test_participants.py  test_post_image.py  test_projects.py  test_reactions.py  test_reap_orphans.py  test_research.py  test_retire.py  test_search.py  test_search_api.py  test_selfupdate.py  test_sidebar.py  test_spawn.py  (+15 more)
(+2 files in other folders)
