[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-hub"
version = "1.0.0"
description = "A Discord-like communication hub for agents on a shared filesystem"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
hubcli = "agenthub.cli:main"

[tool.setuptools.packages.find]
include = ["agenthub*"]

[tool.setuptools.package-data]
agenthub = ["web/*"]
